# l1-jet-id

./: .gitignore  .gitmodules  README.md  environment.yml  fast_jetclass.yml  setup.cfg
deepsets/: LICENSE  README.md
deepsets/deepsets/: deepsets.py  deepsets.yml  deepsets_quantised.py  deepsets_synth.py  flops.py  hyperparam_optimisation.py  nnet_bcast_subtract.h  synth_invariant.py  synthesize.py  test.py  train.py  util.py
deepsets/preprocessing/: convert_h5.py  equalise_normalise.py  feature_selection.py  imported_kfolds.out  plots.py  prepare_data.py  preprocessing.yml  run.snip  saved_kfolds.out  standardisation.py  util.py
deepsets/util/: data.py  plots.py
fast_jetclass/data/: data.py  plots.py  standardization.py
fast_jetclass/deepsets/: deepsets.py  deepsets_quantised.py  deepsets_synth.py  synth_equivariant.py  synthesize.py  test.py  train.py  util.py
fast_jetclass/intnet/: hls_node_edge_projection.py  intnet.py  intnet_quantised.py  intnet_synth.py  synthesize.py  train.py  util.py
fast_jetclass/mlp/: flops.py  mlp.py  mlp_quantised.py  mlp_synth.py  (+4 more)
preprocessing/: equalise_normalise.py  feature_selection.py  ki_preprocessing.yml  plots.py  prepare_data.py  run.snip  standardisation.py  util.py
scripts/: README.md  deepsets_synth  deepsets_test  deepsets_train  intnet_synth  intnet_test  intnet_train  mlp_synth  mlp_test  mlp_train
train_InteractionNetwork/: Readme.md  example_kfold_data_load.ipynb  hls_node_edge_projection.py  list.py  run_script.sh  synthesize.py  test_kfold.ipynb  test_kfold.py  train_kfold.py  train_kfold_single.py
(+88 files in other folders)
