[metadata]
name = fast_jetclass
version = 1.0
author = Patrick Odagiu
author_email = podagiu@ethz.ch
description = Implementation of three geometric learning models and synthetisation onto an FPGA for ultrafast jet classification at the HL-LHC.
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/bb511/fast_jetclass
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: Unix
    Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.2
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = 
  fast_jetclass
  fast_jetclass.deepsets
  fast_jetclass.util
  fast_jetclass.intnet
  fast_jetclass.mlp
  fast_jetclass.data
